--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,3 +7,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps: [uses: fastai/workflows/quarto-ghp@master]
+    with:
+        version: '3.9'
+        
