--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # pyTelegramBotAPI==4.8.0
 git+https://github.com/eternnoir/pyTelegramBotAPI.git
-deta
+deta==1.1.0
 validators==0.20.0
 fastapi==0.88.0
 uvicorn==0.20.0
