--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps: [uses: fastai/workflows/quarto-ghp@master]
-    with:
-        version: '3.9'
-        
+    steps:
+        - uses: fastai/workflows/quarto-ghp@master
+          with:
+            version: '3.9'
