add requirements so that docs can build
The action `deploy.yaml` kept failing because of a no module found error so specifying in `settings.ini`

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = batmanscode
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = pandas deta validators fastapi uvicorn ulid-py pyTelegramBotAPI
 # dev_requirements = 
 # console_scripts =
