install from requirments.txt

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-        - uses: fastai/workflows/quarto-ghp@master
-          with:
-            version: '3.8'
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'
+        cache: 'pip' # caching pip dependencies
+    - run: pip install -r requirements.txt
+    
+    - uses: fastai/workflows/quarto-ghp@master
+      with:
+        version: '3.8'
