--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,5 +15,7 @@ jobs:
     - run: pip install -r requirements.txt
     
     - uses: fastai/workflows/quarto-ghp@master
+      env:
+        BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
       with:
         version: '3.8'
