--- a/.github/workflows/space.yaml
+++ b/.github/workflows/space.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Deta Space Deployment Github Action
-        uses: neobrains/space-deployment-github-action@test101
+        uses: neobrains/space-deployment-github-action@v0.3
         with:
           access_token: ${{ secrets.ACCESS_TOKEN }}
           project_id: ${{ secrets.PROJECT_ID }}
