use fastapi to run on deta and update devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 		"ghcr.io/devcontainers/features/python:1": {
 			"installJupyterlab": "true"
 		},
-		"ghcr.io/devcontainers/features/github-cli:1": {}
+		"ghcr.io/devcontainers/features/github-cli:1": {},
+		"ghcr.io/devcontainers/features/node:1": {}
 	},
 
 	// Configure tool-specific properties.
@@ -34,6 +35,7 @@
 		 // Add the IDs of extensions you want installed when the container is created.
 		 "extensions": [
 		  "ms-python.python",
+		  "ms-toolsai.jupyter"
 		//   "ms-python.vscode-pylance"
 		 ]
 		}
