always use latest version of pytelegrambotapi

--- a/LinkNinja/requirements.txt
+++ b/LinkNinja/requirements.txt
@@ -1,5 +1,5 @@
 pyTelegramBotAPI==4.10.0
-# git+https://github.com/eternnoir/pyTelegramBotAPI.git@ba64180b5f6e2cb8da1a2453f8f9c9505f6281d2#egg=pyTelegramBotAPI
+# git+https://github.com/eternnoir/pyTelegramBotAPI.git
 deta==1.1.0
 validators==0.20.0
 fastapi==0.88.0
