--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-pyTelegramBotAPI==4.10.0
-# git+https://github.com/eternnoir/pyTelegramBotAPI.git@ba64180b5f6e2cb8da1a2453f8f9c9505f6281d2#egg=pyTelegramBotAPI
+# http://stackoverflow.com/questions/17803829/ddg#20720019
+# Deta needs a requirements file in the same folder as the micro
+# this file will use the requirements.txt from root
+
+# -r ./requirements.txt
+# apparently Deta can't work like this
+
+# pasting the full requirements instead
+
+git+https://github.com/eternnoir/pyTelegramBotAPI.git
 deta==1.1.0
 validators==0.20.0
 fastapi==0.88.0
