--- a/LinkNinja/requirements.txt
+++ b/LinkNinja/requirements.txt
@@ -2,8 +2,8 @@ pyTelegramBotAPI==4.10.0
 # git+https://github.com/eternnoir/pyTelegramBotAPI.git
 deta==1.1.0
 validators==0.20.0
-fastapi==0.88.0
-uvicorn==0.20.0
+fastapi
+uvicorn
 ulid-py==1.1.0
 pandas==1.5.2
 nest_asyncio==1.5.6
